# application

./: README.MD  catalog.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_bool_blog.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_product.py  delete_all.py  loaddata.py
catalog/migrations/: 0001_initial.py
catalog/templates/: contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_list.html
catalog/templates/catalog/includes/: inc_menu_down.html  inc_menu_up.html
catalog/templates/includes/: inc_menu_up.html
config/: settings.py  urls.py
